--- a/index.ipynb
+++ b/index.ipynb
@@ -74,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "travel_month = None # \"January\""
+    "travel_month = # \"January\""
    ]
   },
   {
